2019-1/230/users/4026/executions/1599_2049.log
== TEST (2019-03-25 16:28:11) 
-- CODE:
var1=input("Digite o dividendo:")
var2=input("Digite o divisor:")
var3=input("Digite o quociente:")
var4=input("Digite o resto:")
print=
-- ERROR:
File "XXXX", line 5
    print=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:28:20) 
-- CODE:
var1=input("Digite o dividendo:")
var2=input("Digite o divisor:")
var3=input("Digite o quociente:")
var4=input("Digite o resto:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:32:07) 
-- CODE:
var1=input("Digite o dividendo:")
var2=input("Digite o divisor:")
print(var1)
print(var2)
print(var1//var2)
print(var1 % var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(var1//var2)
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:32:48) 
-- CODE:
var1=int(input("Digite o dividendo:"))
var2=int(input("Digite o divisor:"))
print(var1)
print(var2)
print(var1//var2)
print(var1 % var2)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 16:32:54) 
-- CODE:
var1=int(input("Digite o dividendo:"))
var2=int(input("Digite o divisor:"))
print(var1)
print(var2)
print(var1//var2)
print(var1 % var2)
-- EXECUTION TIME:
0.128157
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:33:00) 
-- CODE:
var1=int(input("Digite o dividendo:"))
var2=int(input("Digite o divisor:"))
print(var1)
print(var2)
print(var1//var2)
print(var1 % var2)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
